updated swagger tags
